<resources>
    <string name="app_name">Petanque Score Keeper</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="zero">0</string>
    <string name="reset">Reset</string>
    <string name="add">add</string>
    <string name="team_a">Team A</string>
    <string name="team_b">Team B</string>
    <string name="score_keeper">Score Keeper</string>
    <string name="one">1</string>
</resources>
