<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_margin="8dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:gravity="center"
            android:textSize="28sp"
            android:text="@string/team_a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"/>
        <TextView
            android:layout_margin="8dp"
            android:text="@string/zero"
            android:textSize="56sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_margin="4dp"
                android:text="@string/minus"
                android:layout_width="48dp"
                android:layout_height="48dp" />
            <TextView
                android:text="@string/zero"
                android:layout_width="24dp"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:gravity="center" />
            <Button
                android:layout_margin="4dp"
                android:text="@string/plus"
                android:layout_width="48dp"
                android:layout_height="48dp" />

        </LinearLayout>

        <Button
            android:layout_margin="4dp"
            android:text="@string/add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button" />
    </LinearLayout>
        <View
            android:background="@android:color/darker_gray"
            android:layout_width="1dp"
            android:layout_height="match_parent"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:gravity="center"
                android:textSize="28sp"
                android:text="@string/team_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"/>
            <TextView
                android:layout_margin="8dp"
                android:text="@string/zero"
                android:textSize="56sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:layout_margin="4dp"
                    android:text="@string/minus"
                    android:layout_width="48dp"
                    android:layout_height="48dp" />
                <TextView
                    android:text="@string/zero"
                    android:layout_width="24dp"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:gravity="center" />
                <Button
                    android:layout_margin="4dp"
                    android:text="@string/plus"
                    android:layout_width="48dp"
                    android:layout_height="48dp" />

            </LinearLayout>

            <Button
                android:layout_margin="4dp"
                android:text="@string/add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>


    </LinearLayout>

    <Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:text="@string/reset" />

</LinearLayout>
